# simulation_particules

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  valgrind_all_tests.sh
_reponses/: lab2.md  lab3.md  lab4.md  lab5.md  lab6.md  use_case_diagram.drawio
demo/: CMakeLists.txt  demo_collision.cpp  demo_collision_1D.cpp  demo_collision_2D.cpp  demo_collision_2D_simple.cpp  demo_collision_3D.cpp  demo_collision_3_particules.cpp  demo_collision_8000.cpp  demo_comparaison_murs.cpp  demo_goutte_collision.cpp  demo_systeme_solaire.cpp
demo/plot_python/: comparaison_murs.csv  plot_collision.py  plot_collision_simple.py  plot_comparaison_murs.py  plotting.py
include/: Cellule.hpp  CreerForme.hpp  Exceptions.hpp  ExportCsv.hpp  ExportVTK.hpp  Force.hpp  Particule.hpp  Univers.hpp  UniversGravitationnel.hpp  UniversLJ.hpp  Vector.hpp
profiling/: profiling2D.txt  profiling3D.txt
src/: CMakeLists.txt  Cellule.cpp  Particule.cpp  Univers.cpp  UniversGravitationnel.cpp  UniversLJ.cpp  Vector.cpp
test/: CMakeLists.txt  test_cellule.cpp  test_particule.cpp  test_performance_tp2.cpp  test_univers.cpp  test_univers_1D.cpp  test_univers_tp4.cpp  test_vector.cpp
